# lemur

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  lemur-stats.py  lemur-sweep.py  pyproject.toml  z3-tool-plan.md
lemur/: lemma.py  lemma_xform.py  nla_diff.py  nra_parsers.py  parsers.py  productivity.py  report.py  round.py  sgrep.py  smt_inject.py  split.py  stats.py  stats_compare.py  stats_diff.py  sweep.py  table.py  tally.py  z3_stats.py
lemur/cli/: agent_help.py  main.py  n_over_time.py  nla.py  nla_diff.py  nla_run.py  sdiff.py  search.py  sgrep.py  split.py  split_status.py  stats.py  stats_compare.py  stats_diff.py  sweep.py  tally.py
tests/: test_lemma_xform.py  test_nla_diff_xform.py  test_nla_sample.py  test_nra_xform.py  test_productivity.py  test_round.py  test_stats_arith_conflict.py  test_stats_compare_raw.py  test_stats_diff.py
tests/sample_traces/: arith_conflict_basic.trace  arith_conflict_diff_a.trace  arith_conflict_diff_b.trace  mixed.trace  nla_solver_basic.trace  nla_varmap_basic.trace  nra_basic.trace  nra_xform_basic.trace  nra_xform_repeats.trace  raw_z3_stats_sat.out  raw_z3_stats_unsat.out
