[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemur"
version = "0.1.0"
description = "Z3 trace analysis and debugging toolkit"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
lemur-sweep = "lemur.cli.sweep:main"
lemur-stats = "lemur.cli.stats:main"

[tool.setuptools.packages.find]
include = ["lemur*"]
