[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemur"
version = "0.1.0"
description = "Z3 trace analysis and debugging toolkit"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Arie Gurfinkel", email = "arie@certora.com" },
]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
split = [
    "z3-solver>=4.12",
]

[project.scripts]
lemur = "lemur.cli.main:main"

[tool.setuptools.packages.find]
include = ["lemur*"]
